<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/user">
        <menu>
            <item android:title="@string/home"
                android:id="@+id/trip"
                android:icon="@drawable/ic_baseline_home"/>

            <item android:title="@string/profile"
                android:id="@+id/profile"
                android:icon="@drawable/ic_baseline_perm_identity"/>
        </menu>
    </item>

    <item android:title="@string/other">
        <menu>
            <item android:title="@string/share"
                android:id="@+id/share"
                android:icon="@drawable/ic_baseline_share"/>

            <item android:id="@+id/feedback"
                android:title="@string/feedback"
                android:icon="@drawable/ic_baseline_feedback"/>

            <item android:title="@string/logout"
                android:id="@+id/logout"
                android:icon="@drawable/ic_baseline_logout"/>
        </menu>
    </item>
</menu>