<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Controllers.Clients.UpdateProfile">

    <include layout="@layout/action_bar_toollbar"/>
   <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <io.github.florent37.shapeofview.shapes.ArcView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:elevation="4dp"
                app:shape_arc_height="20dp"
                app:shape_arc_position="bottom">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/update_profile"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:layout_margin="30dp"
                    android:layout_marginBottom="12dp"
                    android:maxLines="2"/>

            </io.github.florent37.shapeofview.shapes.ArcView>
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="invisible"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="30dp"
                android:background="@color/colorWhite">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_user"
                    app:tint="@android:color/black"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@color/colorWhite"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/actualizarname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:inputType="text">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="30dp"
                android:background="@color/colorWhite">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_lock_alt"
                    app:tint="@android:color/black"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@color/colorWhite"
                    app:passwordToggleEnabled="true"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/actualizarpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:focusable="false">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </LinearLayout>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageviewprofileclient"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/man"
            android:layout_gravity="center|top"
            app:civ_border_width="5dp"
            app:civ_border_color="@android:color/black"
            android:layout_marginTop="150dp">
        </de.hdodenhof.circleimageview.CircleImageView>
    <Button
        android:id="@+id/btnupdateprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="actualizar perfil"
        android:textAllCaps="true"
        android:background="@drawable/button_login_rounded"
        android:layout_gravity="bottom"
        android:layout_margin="30dp"
        android:textColor="@android:color/black"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>